tests/view/snapshots/r#mod__view__map_input_to_commands__should_parse_print_body_only_long_flag_other_location.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: GET
      headers: {}
      body:
        Raw: ""
    view_options:
      print_body_only: true
      suppress_output: false
