tests/view/snapshots/r#mod__view__map_input_to_commands__should_parse_to_normal_GET_submit_without_passing_method_as_subcommand_and_no_body.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: GET
      headers: {}
      body:
        Raw: ""
    view_options:
      print_body_only: false
