tests/view/snapshots/r#mod__view__map_input_to_commands__should_parse_to_normal_POST_submit_without_passing_method_as_subcommand_but_passing_some_body_data.snap
---
source: tests/view/map_input_to_commands.rs
expression: output
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: POST
      headers: {}
      body: "{\"Hello\":\"World\"}"

