tests/view/snapshots/r#mod__view__map_input_to_commands__should_set_query_params_by_request_items.snap
---
source: tests/view/map_input_to_commands.rs
expression: output.unwrap()
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params:
            - - search
              - Rust
            - - country
              - br
          anchor: ~
      method: GET
      headers: {}
      body:
        Raw: ""
    view_options:
      print_body_only: false
      suppress_output: false
